
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================
Bulletins:
- Bulletins HTML: Possibilité de définir la taille des textes des cellules Avis du conseil de classe et Signature.
- Possibilité de gérer plusieurs fichiers de signature des bulletins.

Absences2:
- Possibilité de modifier les dates/heure de début et fin d'une saisie depuis la page de saisie d'un traitement.

Discipline:
- Affichage par tranches des incidents à traiter (pour limiter le temps de chargement de la page).
- Possibilité d'imprimer des fichiers OOo pour les sanctions  de type travail et autre.
- Possibilité de modifier les termes 'incident' et 'sanction'.
- Possibilité de saisir certaines sanctions en tant que professeur (liste à préciser dans Définir les sanctions).

Modèles Ooo:
- Possibilité de gérer des modèles OOo en compte scolarité ou cpe.

Gestion:
- Ajout de la date d'entrée d'un élève dans l'établissement.
- Possibilité de choisir l'adresse mail destinataire de l'information comme quoi un changement d'adresse mail responsable ou élèev a eu lieu.
- Possibilité d'ajouter un préfixe au sujet des mails envoyés par Gepi.

Gepi-1.6.3 (17/06/2013)
===========================
Bulletins:
- Possibilité de choisir ce que l'on souhaite faire apparaitre sur les bulletins
  en ce qui concerne les absences (total, absences non-justifiées et/ou retards).
- Possibilité de corriger des notes de bulletins en période partiellement close.
- PDF: Ajout d'un ordre d'affichage des colonnes avec appréciation en premier.
- Possibilité d'afficher la moyenne annuelle des enseignements sur les bulletins PDF.
- Possibilité d'afficher les moyennes de l'élève pour les périodes précédentes et annuelle sur les bulletins HTML.
- Possibilité de valider en tant qu'admin les corrections de bulletins proposées.

Carnets de notes
- Possibilité de corriger des notes de CN en période partiellement close.